--- a/src/index.css
+++ b/src/index.css
@@ -462,7 +462,7 @@ body, html {
 
 /* home icone HomeProductCardMid css */
 
-.HomeProductCardMid {
+/* .HomeProductCardMid {
   width: 20px;
   height: 20px;
   background-color: #fff;
@@ -478,7 +478,7 @@ body, html {
 .HomeProductCardMid:hover {
   background-color: #ff0000;
   color: #fff;
-}
+} */
 
 .tooltip {
   position: absolute;
@@ -497,4 +497,23 @@ body, html {
 
 .group:hover .tooltip {
   opacity: 1;
+}
+
+
+.homeIcecreem{
+  object-fit:cover;
+  outline: 5px solid white;
+  transition: 1s ease;
+}
+.homeIcecreem:hover{
+  transform: scale(1.1);
+}
+
+.ManufactureImg{
+  object-fit:cover;
+  outline: 5px solid white;
+  transition: 1s ease;
+}
+.ManufactureImg:hover{
+  transform: scale(1.1);
 }
