--- a/src/index.css
+++ b/src/index.css
@@ -212,6 +212,12 @@ body, html {
   color: rgba(255, 0, 0, 0.1);
 }
 
+#shopbg{
+
+  background-image: url('./assets/asset50.jpeg');
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+}
 
 /* footer-2 service menu css Start */
 .footerServiceMenu{
