--- a/src/index.css
+++ b/src/index.css
@@ -598,3 +598,54 @@ body, html {
 .pin-text {
   margin-top: 10px;
 }
+
+
+
+/* Blog Card Css Start */
+/* Animation of animista */
+
+.slide-top {
+  display: inline-block; /* Ensure the element is inline-block or block for the animation to be visible */
+  transition: transform 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940); /* Smooth transition */
+  /* background-color: ffffff; */
+  /* width: 200px; */
+  height: 200px;
+  background-color: color(from color srgb r g b);
+}
+
+.slide-top:hover {
+  transform: translateY(-50px); /* Apply the slide-top transformation on hover */
+}
+
+/* Keyframes for compatibility */
+@-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+  }
+}
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+  }
+}
+
+#blog-card1-text {
+  line-height: 40px;
+  font-family: kalnia;
+}
+
+.tips-text {
+  font-family: kalnia;
+}
+
+/* Blog Card Css end */
