--- a/src/index.css
+++ b/src/index.css
@@ -364,6 +364,7 @@ body, html {
   color: white;
   font-size: 20px;
   border-radius: 40px;
+  margin: 0 13px;
 }
 .home-bt-shop:hover {
   background-color: black;
